--- a/tp-api/tsconfig.json
+++ b/tp-api/tsconfig.json
@@ -1,12 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "commonjs",
-      "strict": true,
-      "rootDir": "./src",
-      "outDir": "./dist",
-      "esModuleInterop": true,
-      "resolveJsonModule": true
-    }
-  }
-  
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "resolveJsonModule": true
+  },
+  "include": ["src"]
+}
