--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   api:
-    build: .
+    build: ./tp-api
     ports:
       - "3000:3000"
     environment:
@@ -11,4 +9,17 @@ services:
     env_file:
       - .env
     volumes:
-      - ./data:/app/data
+      - ./tp-api/data:/app/data
+  client:
+    build: ./tp-client
+    ports:
+      - "5173:5173"
+    environment:
+      - NODE_ENV=development
+      - VITE_API_BASE_URL=http://localhost:3000
+    volumes:
+      - ./tp-client:/app
+      - client_node_modules:/app/node_modules
+    command: npm run dev
+volumes:
+  client_node_modules:
